crates/nota-tui/tests/snapshots/main_screen__main_stopped.snap
---
source: crates/nota-tui/tests/main_screen.rs
expression: terminal.backend()
---
"╭─ ≈ nota · Woodwork workshop ─────── ■ stopped · disk full ─╮"
"│          ◆            ◇          ◆            ◇        ◆   │"
"│ ▇▂█▂▄█▅▄▄▁▆██▅▄▆▄█▁█▄▇▇█▁▇████▇█▇▁▅▇▂▅▁█▅▇▇▆▂▅▂▂█▄▂▅▄▂▁█▅▅ │"
"│                                                            │"
"│   Anything thicker goes straight through the machine.      │"
"│   …so the cupping could be from the drying shed, and we    │"
"│   did look at that in the last session.                    │"
"│ ◆ Remember that for a wide panel you check the moisture,   │"
"│   the stain and the clamps before anything else.           │"
"│ ◇ The table is getting full sun most days, so the joints   │"
"│   may open up in summer as well.                           │"
"│   Then we have the finish itself, and we want to rule out  │"
"│   a reaction, so test the oil on a scrap first…            │"
"│                                                            │"
"│   The disk is full, so nota stopped the recording.         │"
"│   Everything up to 01:12:48 is saved.                      │"
"│   Free some space, then open the session from Home to      │"
"│   finish it.                                               │"
"│                                                            │"
"╰─ ⏎ home ──────────────────────────────────── 1h 12m saved ─╯"
